Remove game from repository and load as iframe

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -72,7 +72,7 @@ nav {
   justify-content: center;
 
   .unity-container {
-    max-width: 800px;
-    width: 100%;
+    width: 960px;
+    height: 100%;
   }
 }
