--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -1,24 +1,34 @@
 /* variables */
+
+// $kleur-rood: #7e1621;
+$kleur-rood: #6e1321;
+$kleur-donkerrood: #310c16;
+$kleur-goud0: #ebb803;
+$kleur-goud1: #fadd00;
+$kleur-goud2: #f5d500;
+$kleur-goud3: #8f5a14;
+$kleur-wit: #FFFFFF;
 $kleur-zwart: #000000;
-$kleur-grijs: rgb(149, 149, 149);
-$white: #FFFBFA;
+
 
 /* bootstrap override */
-$font-color: $white;
 @font-face {
-  font-family: LemonMilk;
-  src: url(fonts/LEMONMILK-Regular.otf); 
+  font-family: Minion Variable Concept;
+  src: url(fonts/MinionVariableConcept-Roman.otf); 
 }
 
-$font-header: LemonMilk, Arial, Helvetica, sans-serif;
-$font-text: LemonMilk, Arial, Helvetica, sans-serif;
+$font-header: Minion Variable Concept, Arial, Helvetica, sans-serif;
+$font-text: Minion Variable Concept, Arial, Helvetica, sans-serif;
 
-$primary: $kleur-zwart;
-$secondary: $kleur-grijs;
+$primary: $kleur-donkerrood;
+$secondary: $kleur-rood;
+$font-color-primary: $kleur-goud0;
+$font-color-secondary: #FFFFFF;
+
 
 $theme-colors: (
-  "primary": $kleur-zwart,
-  "secondary": $kleur-grijs,
+  "primary": $primary,
+  "secondary": $secondary,
   "danger": #ff4136,
   "white": #f6c8b1,
 );
@@ -26,9 +36,8 @@ $theme-colors: (
 $font-family-sans-serif: $font-text;
 $headings-font-family: $font-header;
 $headings-font-weight: 700;
-$header-color: $kleur-zwart;
-$body-color: $white;
-$body-bg: $kleur-grijs;
+$header-color: $font-color-primary;
+$body-bg: $secondary;
 
 $h2-font-size: 3.2rem;
 $h3-font-size: 2.5rem;
