--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -93,10 +93,14 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
-  .plaetje{
-    width: 400px;
-    max-width: 100%;
+
+  .thema-plaetje {
+    padding-top: 60px;
+    max-width: 960px;
+    width: 100%;
+    height: 100%;
+    border-bottom: 5px;
+    border-bottom-color: $primary;
   }
 }
 
@@ -106,18 +110,18 @@ nav {
   margin-top: -50px;
   width: 100px;
 
-  .kapot {
-    position: fixed;
-    width: 100px;
-  }
-  .heel {
-    position: fixed;
-    width: 100px;
+  .unity-container {
+    width: 100%;
+    max-width: 960px;
+    height: 650px;
+    border:0px;
   }
 
-  // only show it when it does not overlap with the other stuff (960 + 105 * 2)
-  @media screen and (max-width:1170px){
-    display: none;
+  .commissiefoto {
+    max-width: 720px;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
 }
 
@@ -127,6 +131,7 @@ nav {
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  padding: 1em;
 
   a {
     text-decoration: none;
@@ -137,9 +142,9 @@ nav {
   }
 
   .instagram-embed{
-    width: 400px;
-    height: 100%;
-    max-width: 100%;
+    max-width: 400px;
+    max-height: 400px;
+    width: 100%;
   }
 }
 
