--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -126,7 +126,8 @@ nav {
 
   .thema-plaetje {
     padding-top: 60px;
-    width: 960px;
+    max-width: 960px;
+    width: 100%;
     height: 100%;
     border-bottom: 5px;
     border-bottom-color: $primary;
@@ -143,7 +144,8 @@ nav {
   justify-content: center;
 
   .unity-container {
-    width: 960px;
+    width: 100%;
+    max-width: 960px;
     height: 650px;
     border:0px;
   }
@@ -157,7 +159,8 @@ nav {
   color: $font-color-secondary;
 
   .commissiefoto {
-    width: 720px;
+    max-width: 720px;
+    width: 100%;
     margin-bottom: 10px;
     margin-top: 10px;
   }
@@ -169,6 +172,7 @@ nav {
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  padding: 1em;
 
   a {
     text-decoration: none;
@@ -179,8 +183,9 @@ nav {
   }
 
   .instagram-embed{
-    width: 400px;
-    height: 400px;
+    max-width: 400px;
+    max-height: 400px;
+    width: 100%;
   }
 }
 
