--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -14,11 +14,13 @@ $kleur-zwart: #000000;
 /* bootstrap override */
 @font-face {
   font-family: Minion Variable Concept;
-  src: url(fonts/MinionVariableConcept-Roman.otf); 
+  src: './fonts/MinionVariableConcept-Roman.otf';
 }
 
 $font-header: Minion Variable Concept, Arial, Helvetica, sans-serif;
 $font-text: Minion Variable Concept, Arial, Helvetica, sans-serif;
+
+
 
 $primary: $kleur-donkerrood;
 $secondary: $kleur-rood;
@@ -39,6 +41,7 @@ $headings-font-weight: 700;
 $header-color: $font-color-primary;
 $body-bg: $secondary;
 
+$h1-font-size: 4.4rem;
 $h2-font-size: 3.2rem;
 $h3-font-size: 2.5rem;
 $h4-font-size: 2rem;
