--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -156,9 +156,9 @@ nav {
 
   .thema-plaetje {
     padding-top: 60px;
-    width: 960px;
+    width: 100%;
     height: 100%;
-    max-width: 100%;
+    max-width: 960px;
     border-bottom: 5px;
     border-bottom-color: $primary;
   }
@@ -167,7 +167,14 @@ nav {
 .divider{
   display: flex;
   flex-direction: column;
+  
   align-items: center;
+  img {
+    max-width: 738px;
+    width: 100%;
+    height: 100%;
+  }
+
   .boven {
     margin-top: 20px;
     margin-bottom: 20px;
