--- a/src/pages/thema/thema.scss
+++ b/src/pages/thema/thema.scss
@@ -10,8 +10,8 @@
     justify-content: center;
 
     .unity-container {
-        width: 960px;
-        height: 650px;
+        width: 100%;
+        max-width: 960px;
         border:0px;
     }
 }
@@ -24,8 +24,8 @@
     color: $font-color-secondary;
 
     .commissiefoto {
-        width: 720px;
-        max-width: 100%;
+        width: 100%;
+        max-width: 720px;
         margin-bottom: 10px;
         margin-top: 10px;
     }
