--- a/src/pages/thema/thema.scss
+++ b/src/pages/thema/thema.scss
@@ -10,8 +10,8 @@
     justify-content: center;
 
     .unity-container {
-        width: 100%;
-        max-width: 960px;
+        width: 960px;
+        height: 650px;
         border:0px;
     }
 }
