--- a/src/pages/opening/opening.scss
+++ b/src/pages/opening/opening.scss
@@ -11,7 +11,8 @@ body {
     flex-direction: column;
     align-items: center;
     img {
-        max-width: 100%;
-        height: 100vh;
+        max-height: 100vh;
+        max-width: 100vw;
+        height: 100%;
     }
 }
