--- a/src/assets/scss/thema.scss
+++ b/src/assets/scss/thema.scss
@@ -3,7 +3,7 @@
 /* video */
 .video {
     margin-bottom: 30px;
-    height: 100px;
+    justify-content: center;
 }
 /* game */
 .game .game-container {
